# face_camera

./: .gitignore  README.md  dev.sh  main.py
backend/: .env  alembic.ini  main.py  pyproject.toml
backend/app/core/: config.py  db.py  scheduler.py
backend/app/models/: __init__.py
backend/app/models/attendance/: __init__.py  attendance.py  camera.py  employee.py  people.py  scheduler_config.py
backend/app/models/rbac/: __init__.py  permission.py  role.py  role_permission_association.py  user.py  user_role_association.py
backend/app/modules/attendance/enum/: camera.py
backend/app/modules/attendance/exceptions/: camera.py
backend/app/modules/attendance/repositories/: attendance.py  camera.py  employee.py  people.py  scheduler_config.py
backend/app/modules/attendance/routers/: __init__.py  attendance.py  camera.py  employee.py  people.py  scheduler_config.py
backend/app/modules/attendance/schemes/: attendance.py  camera.py  employee.py  people.py  scheduler_config.py
backend/app/modules/attendance/services/: attendance.py  camera.py  employee.py  people.py  scheduler_config.py
backend/app/modules/rbac/routers/: auth.py  permission.py  role.py
backend/migrations/: env.py
backend/migrations/versions/: 9b369a78ac9c_initial_migration_with_employees_and_.py  ff5c0d2c2080_add_foreign_keys_to_attendance_table.py
frontend/: package-lock.json  package.json
frontend/src/: main.tsx
frontend/src/api/: axios.ts
frontend/src/components/: Layout.tsx  Sidebar.tsx
frontend/src/data/: attendanceApi.ts  cameraApi.ts  camerasStorage.ts  employeeApi.ts  (+3 more)
(+20 files in other folders)
