[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "apscheduler>=3.11.2",
    "fastapi[standard]>=0.136.1",
    "httpx>=0.28.1",
    "sqlalchemy>=2.0.49",
]
